--- a/static/style.css
+++ b/static/style.css
@@ -4,11 +4,17 @@ body {
     text-align: center;
 }
 
-li {
+a {
     font-size: 36pt;
     text-align: center;
     letter-spacing: 1px;
-    display: inline;
+    display: block;
+    text-decoration: none;
+    color: black;
+    
+}
+a:hover {
+  color: #ccc;
 }
 
 p1 {
@@ -20,9 +26,6 @@ p1 {
 
 }
 
-ol {
-  list-style-type: none;
- }
 
 img {
     border: 1px solid #ddd;
@@ -33,11 +36,6 @@ img {
     margin: 0 auto;
   }
   
-  
-  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-li:hover {
-    color: #ccc;
-  }
   
 details {
     user-select: none;
@@ -66,13 +64,14 @@ summary::-webkit-details-marker {
     display: none;
   }
 
-  ol.nav {
-    padding-left: 0px;
+div.nav {
+    padding: 200px;
     background-color:rgb(189, 174, 44);
-    text-align: center;
+    border-radius: 5%;
+    border: 1px solid #ddd;
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
   }
-  ol.nav > li {
-    display: inline-block;
-    padding: 10px 20px;
-  }
+
 
