--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Audiowide&effect=fire);
 body {
     font-family: "Audiowide", sans-serif;
-    
+    background-image:url('bg2.jpg') !important;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     text-align: center;
-    background-color: #7a00ff;
 }
 
 h1 {
@@ -31,7 +30,6 @@ summary {
   background-size: 100% 100%;
   border-radius: 3%;
   border: solid 3px #FC5185;
-  transition: border-width 0.6s linear;
   width: 50%;
   height: 350px;
   margin-left : auto;
@@ -39,7 +37,7 @@ summary {
   margin-top: 10%;
 
 }
-.nav:hover { border-width: 10px; }
+
 
 .nav .inner {
     font-size: 18px;
