--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,9 +5,14 @@
     <h3 class="title">Sign Up</h3>
     <div class="box">
         {% with messages = get_flashed_messages() %}
-        {% if messages %}
+        {% if messages[0] == "Email address already exists" %}
         <div class="notification is-danger">
-            {{ messages }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
+            {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
+        </div>
+        {% endif %}
+        {% if messages[0] == "Information can't be null!" %}
+        <div class="notification is-danger">
+            {{ messages[0] }}. Please sign up again.
         </div>
         {% endif %}
         {% endwith %}
