--- a/static/style.css
+++ b/static/style.css
@@ -1,23 +1,47 @@
 @import url(https://fonts.googleapis.com/css?family=Audiowide&effect=fire);
+
 body {
     font-family: "Audiowide", sans-serif;
-    background-image:url('bg2.jpg') !important;
+    background-image:url('bg2.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     text-align: center;
 }
 
-
-h1 {
-  font-size: 36pt;
-  letter-spacing: 2px;
-  margin-top:5%;
-  text-shadow: 1px 1px #040c50;
-  font-family: "Audiowide", sans-serif;
+.topbar .container {
+  margin-left: 70%;
 }
 
+.button {
+  display: inline-block;
+  padding: 10px;
+  color:red
+}
+
+
+h1 {
+  font-size: 28pt;
+  letter-spacing: 2px;
+  text-shadow: 1px 1px #040c50;
+  font-family: "Audiowide", sans-serif;
+  margin-top: 0%;
+}
+
+.subtitle {
+  text-align: left;
+  margin-bottom: 0%;
+  width:40%
+
+}
+
+.list {
+  text-align: left;
+  font-size:10pt;
+  width: 40%;
+
+}
 summary {
-  font-size: 36pt;
+  font-size: 28pt;
   text-align: center;
   letter-spacing: 1px;
 
@@ -26,36 +50,31 @@ summary {
 
 .nav {
   
-  background-image:url('bg.png');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 3%;
-  border: solid 3px #FC5185;
   width: 50%;
   height: 350px;
   margin-left : auto;
   margin-right: auto;
-  margin-top: 10%;
+  margin-top: 0%;
 
 }
 
 
 .nav .inner {
-    font-size: 18px;
+    font-size: 22px;
     text-align: center;
     color: black;
     width:100%;
     height:100%;
 }
 
-.nav .inner a {
-    font-size: 36pt;
+.nav .inner p {
     text-align: center;
     width: 100%;
-    display:inline;
+    display:block;
     text-decoration: none;
-    color: rgb(185, 6, 21);
+    color:salmon;
     padding: 0%;
+    margin-top: 3%;
     
 }
 
@@ -66,13 +85,17 @@ summary {
 .nav .inner img {
     border: 6px solid #ddd;
     border-radius: 50%;
-    width: 200px;
+    max-width: 50%;
+    max-height: 50%;
     display: block;
     margin: 0 auto;
+
     
   } 
 .nav .inner audio {
     margin-top: 10px;
+    width: 30%;
+    height: 30%;
 }
 
 details {
