--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <h1 class="title">
-    Flask Login Example
+    fave
 </h1>
 <h2 class="subtitle">
-    Easy authentication and authorization in Flask.
+    Bring you to music ♫
 </h2>
 {% endblock %}
