--- a/templates/music.html
+++ b/templates/music.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-  <h1>Favorite Artist's Top Track</h1>
+  <div class="topbar">
+    <nav class="container">
+      <a href="{{ url_for('main.profile') }}" class="button">
+        Profile
+      </a>
+      <a href="{{ url_for('auth.logout') }}" class="button">
+        Logout
+      </a>
+    </nav>
+  </div>
+  <div class="title">
+    <h1>{{name}}'s Favorite Artist's Top Tracks</h1>
+  </div>
   {% if idcheck == None %}
   <div>
     <p1>Please save your favorite artist's ID below!</p1>
@@ -27,48 +39,25 @@
   </form>
 
   {% else %}
-  <div>
-    <p1>Please save your favorite artist's ID below!</p1>
-  </div>
-  {% with messages = get_flashed_messages() %}
-  {% if messages %}
-  <div>
-    {{ messages[0] }}
-  </div>
-  {% endif %}
-  {% endwith %}
-  <form method="POST" action="/musicadd">
-    <div>
-      <input type="text" name="get_name" placeholder="Enter Name" autofocus="">
-      <button>Search n Save</button>
-    </div>
-  </form>
-  <form method="POST" action="/musicdelete">
-    <div>
-      <input type="text" name="delete_id" placeholder="Enter ID to remove" autofocus="">
-      <button>Remove</button>
-    </div>
-  </form>
-  <div align="left">
-    <p2 style='text-align:center'>Your saved artists</p2>
+  <div class="list">
+    <p2>Your saved artists</p2>
     <nav>
       <ol>
-
         {%for i in range(0, len)%}
         <li style="color:blue;">{{artistname_list[i]}} - {{artistid_list[i]}}</li>
         {%endfor%}
-
       </ol>
     </nav>
   </div>
-  <div>
+  <div class="artist">
     <details>
       <summary>
         <p1 class="glow-on-hover">{{artist_name}}</p1>
       </summary>
       <div class="nav">
         <div class="inner">
-          <a href='{{lyrics_url}}' target="_blank" class="font-effect-fire">{{tracktitle}}</a>
+          <p class="font-effect-fire">{{tracktitle}}</p>
+          <a href='{{lyrics_url}}' target="_blank">Lyrics</a>
 
           <img src={{trackpic}}>
 
@@ -79,6 +68,28 @@
         </div>
       </div>
     </details>
+  </div>
+  <div class="subtitle">
+    <p1>Please save your favorite artist's ID below!</p1>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div>
+      {{ messages[0] }}
+    </div>
+    {% endif %}
+    {% endwith %}
+    <form method="POST" action="/musicadd">
+      <div class="save">
+        <input type="text" name="get_name" placeholder="Enter Name" autofocus="">
+        <button>Search n Save</button>
+      </div>
+    </form>
+    <form method="POST" action="/musicdelete">
+      <div class="delete">
+        <input type="text" name="delete_id" placeholder="Enter ID to remove" autofocus="">
+        <button>Remove</button>
+      </div>
+    </form>
   </div>
   {% endif %}
 </body>
