--- a/templates/music.html
+++ b/templates/music.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/static/style.css">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" /> -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 
 <body>
